# secure_context

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mypy  Dockerfile  LICENSE  README.md  build.py  build.sh  pyproject.toml  setup.cfg
.github/workflows/: poetry.yml  tests.yml
antenna/security/: __init__.py  ssl_context.py
secure_context/: __init__.py  ssl_context.py
secure_context/_extensions/: _edhc_curve.c  _edhc_curve.pyi  compile_flags.txt
security/: __init__.py  ssl_context.py
src/security/: __init__.py  ssl_context.py
tests/: README.md  test_import.py
