## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[venv]
extras =
    dev

[metadata]
url = https://git.exyon.local/ia/security
name = security
author = Vítor Vasconcellos
version = 1.0.0b1
license = 
keywords =
    base
    modules
    package
    bootstrap
    foundation
maintainer = Vítor Vasconcellos
description = Utilities for creation of security contexts
classifiers =
    Topic :: Security
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    # https://pypi.org/pypi?%3Aaction=list_classifiers
download_url =
project_urls =
    Bug Tracker = https://git.exyon.local/ia/security/issues
    Source Code = https://git.exyon.local/ia/security
author_email = vitor.vasconcellos@e-xyon.com.br
maintainer_email = ai@e-xyon.com.br
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# bool
zip_safe = True
    # Indicates whether your package is able to be run from within a zip archive or not
# list-semi
setup_requires =
    pip >= 18.1, != 19.0
    setuptools >= 40.5.0
    # List all packages required in order to run your package's setup.py
# str
python_requires = >=3.7
    # Define the required python interpreter version to run you package
# list-semi
install_requires =
    importlib_metadata >= 0.9, < 1.0
    importlib_resources >= 1.0.2, < 1.1
    # List your packages dependencies
# bool
include_package_data = False
    # Automatically include in your package any data file declared inside MANIFEST.in
    # If possible, it is recommended to use package_data and exclude_package_data instead

# Configure find: and find_namespace:
[options.packages.find]
where = src

# Put data files inside package
[options.package_data]
security = ffdhe4096
# package_name = files_pattern, ...|

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    black
    isort
    venvtools
    # Put your development requirements here
docs =
    # Put your documentation requirements here
tests =
    # Put your tests requirements here
