## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[venv]
extras =
    dev

[metadata]
url = https://git.exyon.local/ia/security
name = security
author = Vítor Vasconcellos
version = 1.0.0rc2
license =
keywords =
    base
    modules
    package
    bootstrap
    foundation
maintainer = Vítor Vasconcellos
description = Utilities for creation of security contexts
classifiers =
    Topic :: Security
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # https://pypi.org/pypi?%3Aaction=list_classifiers
download_url =
project_urls =
    Bug Tracker = https://git.exyon.local/ia/security/issues
    Source Code = https://git.exyon.local/ia/security
author_email = vitor.vasconcellos@e-xyon.com.br
maintainer_email = ai@e-xyon.com.br
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# str
packages = find:
    # Indicates which packages shoud be included in this module
    # find: and find_namespace: will automatically find all packages
# bool
zip_safe = True
    # Indicates whether your package is able to be run from within a zip archive or not
# list-semi
setup_requires =
    pip >= 18.1, != 19.0
    setuptools >= 40.5.0
    # List all packages required in order to run your package's setup.py
# str
python_requires = >=3.6
    # Define the required python interpreter version to run you package
# list-semi
install_requires =
    importlib_metadata
    importlib_resources
    # List your packages dependencies
# bool
include_package_data = False
    # Automatically include in your package any data file declared inside MANIFEST.in
    # If possible, it is recommended to use package_data and exclude_package_data instead

# Put data files inside package
[options.package_data]
* = py.typed
security = ffdhe4096
# package_name = files_pattern, ...

# Custom options for automatic package search
[options.packages.find]
exclude =
    tests

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    black
    isort
    venvtools
    # Put your development requirements here
docs =
    # Put your documentation requirements here
tests =
    # Put your tests requirements here
